# django_management_command_decorator

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
django_management_command_decorator/: asgi.py  settings.py  urls.py  wsgi.py
management_command_decorator/: __init__.py  apps.py  commands.py  decorator.py  tests.py
